Alignment fix

--- a/src/components/EmojiCard/index.css
+++ b/src/components/EmojiCard/index.css
@@ -10,15 +10,22 @@
   width: 80px;
 }
 .emoji-button {
-  background-color: #ffffff33;
-  width: 90%;
+  background-color: transparent;
+  width: 70%;
   height: 150px;
   padding: 20px;
-  border: 3px solid #ffffff30;
+  border: 2px solid #ffffff30;
   border-radius: 24px;
   cursor: pointer;
   outline: none;
+  transition: transform 0.2s ease-in-out;
 }
+
+.emoji-button:hover {
+  background-color: #161616;
+  transform: scale(1.05); /* Slight scaling effect on hover */
+}
+
 @media screen and (max-width: 768px) {
   .emoji-button {
     width: 90%;
