--- a/src/components/EmojiGame/index.css
+++ b/src/components/EmojiGame/index.css
@@ -2,7 +2,7 @@
 .emojigame-bg-container {
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(to bottom right, #f081c6, #721145);
+  background-image: linear-gradient(to bottom right, #000000, #000000);
   min-height: 100vh;
 }
 .emoji-body-container {
@@ -10,14 +10,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 80px;
-  padding-bottom: 80px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 .emojis-list-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   flex-wrap: wrap;
-  width: 80%;
+  width: 90%;
   margin: auto;
 }
