--- a/src/components/NavBar/index.css
+++ b/src/components/NavBar/index.css
@@ -3,7 +3,7 @@
   background-image: linear-gradient(to right, #000000, #1c1c1c);
   display: flex;
   justify-content: center;
-  padding: 10px;
+  padding: 6px;
   color: white;
 }
 
@@ -17,7 +17,7 @@
   width: 80%;
 }
 .nav-logo {
-  margin-right: 20px;
+  margin-right: 5px;
 }
 .nav-logo-container {
   display: flex;
@@ -25,13 +25,14 @@
 }
 .nav-heading {
   color: white;
+  font-size: 20px;
 }
 .nav-score-container {
   display: flex;
 }
 .nav-score {
   margin-right: 30px;
-  font-size: 25px;
+  font-size: 18px;
 }
 @media screen and (max-width: 578px) {
   .nav-heading {
@@ -47,7 +48,7 @@
   }
   .nav-logo {
     margin-right: 5px;
-    height: 40px;
+    height: 35px;
   }
 }
 @media screen and (max-width: 575px) {
