--- a/src/components/WinOrLoseCard/index.css
+++ b/src/components/WinOrLoseCard/index.css
@@ -16,23 +16,23 @@
 }
 .win-lose-gamestatus {
   color: #ffffff;
-  font-size: 55px;
+  font-size: 35px;
   font-weight: 500;
 }
 .win-lose-scorelabel {
   color: #ffffff;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: bold;
   margin: 0px;
 }
 .win-lose-score {
-  font-size: 45px;
-  color: #6a59ff;
+  font-size: 30px;
+  color: #db88d0;
   font-weight: bold;
 }
 .win-lose-img {
-  width: 350px;
-  height: 450px;
+  width: 300px;
+  height: 400px;
 }
 .win-lose-img-container {
   display: flex;
@@ -57,11 +57,11 @@
 
 @media screen and (min-width: 768px) and (max-width: 768px) {
   .win-lose-img {
-    height: 350px;
-    width: 300px;
+    height: 300px;
+    width: 250px;
   }
   .win-lose-gamestatus {
-    font-size: 50px;
+    font-size: 30px;
   }
 }
 
